--- a/app/src/declaration/view/declaration.html
+++ b/app/src/declaration/view/declaration.html
@@ -6,6 +6,8 @@
         <md-button class="md-text-icon-button" aria-label="edit" ng-click="viewDocuments()">
             <md-icon>insert_drive_file</md-icon> Dokumenter
         </md-button>
+
+        <img src="app/assets/images/rm-weblogo.jpg" class="rm-logo">
     </md-sidenav>
 
     <div class="od-info-declarations" flex>
