--- a/app/src/declaration/view/documents.html
+++ b/app/src/declaration/view/documents.html
@@ -30,6 +30,15 @@
                         <td md-cell>{{c.lastChangedBy}}</td>
                     </tr>
                 </tbody>
+
+                <tbody md-body>
+                    <tr md-row md-select="dessert" md-select-id="name" md-auto-select ng-repeat="i in [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]">
+                        <td md-cell><md-checkbox aria-label="Checkbox {{c.shortRef}}" ng-model="c.shortRef" ng-click="selectedFile(c)"></md-checkbox></td>
+                        <td md-cell>Et filnavn</td>
+                        <td md-cell>4. juni</td>
+                        <td md-cell>Ida Thomsen</td>
+                    </tr>
+                </tbody>
             </table>
         </md-table-container>
     </md-card-content>
