--- a/app/src/declaration/view/patient-info-toolbar.html
+++ b/app/src/declaration/view/patient-info-toolbar.html
@@ -1,6 +1,6 @@
 <span ng-show="!editMode">
     <md-button class="md-text-icon-button" aria-label="lås sagen" ng-click="lockCase()">
-        <md-icon>lock</md-icon> lås sagen
+        <md-icon>lock</md-icon> afslut sagen
     </md-button>
     <md-button class="md-text-icon-button" aria-label="edit" ng-click="toggleEdit()">
         <md-icon>edit</md-icon> rediger
@@ -9,7 +9,7 @@
 
 <span ng-show="editMode">
     <md-button class="md-text-icon-button" aria-label="lås sagen" ng-click="lockCase()">
-        <md-icon>lock</md-icon> gem og lås sagen
+        <md-icon>lock</md-icon> gem og afslut sagen
     </md-button>
 
     <md-button class="md-text-icon-button" aria-label="edit" ng-click="toggleEdit(); saveEdit()">
