--- a/app/src/declaration/view/sections/declaration.html
+++ b/app/src/declaration/view/sections/declaration.html
@@ -6,23 +6,11 @@
     </md-card-title>
     <md-card-content>
         <md-input-container class="md-block">
-            <label>Læge 1</label>
-            <input ng-model="case.petitionDate" ng-disabled="!editPatientData">
-        </md-input-container>
-        <md-input-container class="md-block">
-            <label>Læge 2</label>
+            <label>Læge</label>
             <input ng-model="case.petitionDate" ng-disabled="!editPatientData">
         </md-input-container>
         <md-input-container class="md-block">
             <label>Psykolog</label>
-            <input ng-model="case.petitionDate" ng-disabled="!editPatientData">
-        </md-input-container>
-        <md-input-container class="md-block">
-            <label>Socialrådgiver</label>
-            <input ng-model="case.petitionDate" ng-disabled="!editPatientData">
-        </md-input-container>
-        <md-input-container class="md-block">
-            <label>Sekretær</label>
             <input ng-model="case.petitionDate" ng-disabled="!editPatientData">
         </md-input-container>
     </md-card-content>
