--- a/app/src/declaration/view/sections/doctor-board.html
+++ b/app/src/declaration/view/sections/doctor-board.html
@@ -14,7 +14,7 @@
         </md-radio-group>
         <md-input-container class="md-block">
             <label>Tekst</label>
-            <textarea ng-model="case.forensicDoctorCouncilText" rows="3" md-select-on-focus ng-disabled="!editPatientData"></textarea>
+            <textarea class="textarea-highlight" ng-model="case.forensicDoctorCouncilText" rows="3" md-select-on-focus ng-disabled="!editPatientData"></textarea>
         </md-input-container>
     </md-card-content>
 </md-card>
