--- a/app/src/declaration/view/sections/icd-10.html
+++ b/app/src/declaration/view/sections/icd-10.html
@@ -7,12 +7,28 @@
     <md-card-content>
         <md-input-container class="md-block">
             <label>Hoveddiagnose</label>
-            <input ng-model="case.ethnicity" ng-disabled="!editPatientData">
+            <input ng-model="case.diagnosis" ng-disabled="!editPatientData">
         </md-input-container>
         <md-input-container class="md-block">
-            <label>Bidiagnoser</label>
+            <label>Bidiagnose</label>
+            <input ng-model="case.diagnosis2" ng-disabled="!editPatientData">
+        </md-input-container>
+         <!--<md-input-container class="md-block">
+            <label>Bidiagnose</label>
             <input ng-model="case.ethnicity" ng-disabled="!editPatientData">
         </md-input-container>
+         <md-input-container class="md-block">
+            <label>Bidiagnose</label>
+            <input ng-model="case.ethnicity" ng-disabled="!editPatientData">
+        </md-input-container>
+         <md-input-container class="md-block">
+            <label>Bidiagnose</label>
+            <input ng-model="case.ethnicity" ng-disabled="!editPatientData">
+        </md-input-container>
+         <md-input-container class="md-block">
+            <label>Bidiagnose</label>
+            <input ng-model="case.ethnicity" ng-disabled="!editPatientData">
+        </md-input-container>-->
     </md-card-content>
     <md-card-actions layout="row">
         <span flex></span>
