--- a/app/src/declaration/view/info-cards.html
+++ b/app/src/declaration/view/info-cards.html
@@ -2,23 +2,31 @@
     <div layout="column" flex-gt-sm="25" flex-sm="50" flex="100">
         <ng-include src="'app/src/declaration/view/sections/basic-info.html'"></ng-include>
 
-        <ng-include src="'app/src/declaration/view/sections/ethnicity.html'"></ng-include>
+        <ng-include src="'app/src/declaration/view/sections/referral.html'"></ng-include>
+    </div>
+
+    <div layout="column" flex-gt-sm="50" flex="100">
+        <ng-include src="'app/src/declaration/view/sections/history.html'"></ng-include>
+
+        <ng-include src="'app/src/declaration/view/sections/judgement.html'"></ng-include>
+    </div>
+<!--
+    <div layout="column" flex-gt-sm="25" flex-sm="50" flex="100">
+        <ng-include src="'app/src/declaration/view/sections/history.html'"></ng-include>
+
+        <ng-include src="'app/src/declaration/view/sections/declaration.html'"></ng-include>
     </div>
 
     <div layout="column" flex-gt-sm="25" flex-sm="50" flex="100">
-        <ng-include src="'app/src/declaration/view/sections/referral.html'"></ng-include>
-        
-        <ng-include src="'app/src/declaration/view/sections/history.html'"></ng-include>
-    </div>
+        <ng-include src="'app/src/declaration/view/sections/doctor-board.html'"></ng-include>
+
+        <ng-include src="'app/src/declaration/view/sections/judgement.html'"></ng-include>
+    </div>-->
 
     <div layout="column" flex-gt-sm="25" flex-sm="50" flex="100">
         <ng-include src="'app/src/declaration/view/sections/declaration.html'"></ng-include>
 
         <ng-include src="'app/src/declaration/view/sections/doctor-board.html'"></ng-include>
-    </div>
-
-    <div layout="column" flex-gt-sm="25" flex-sm="50" flex="100">
-        <ng-include src="'app/src/declaration/view/sections/judgement.html'"></ng-include>
 
         <ng-include src="'app/src/declaration/view/sections/icd-10.html'"></ng-include>
     </div>
