--- a/app/src/declaration/view/sections/basic-info.html
+++ b/app/src/declaration/view/sections/basic-info.html
@@ -13,14 +13,16 @@
             <label>CPR</label>
             <input ng-model="case.cprNumber"  ng-disabled="!editPatientData">
         </md-input-container>
-        <md-input-container class="md-block">
-            <label>Fornavn</label>
+        <div layout="row">
+        <md-input-container>
+            <label>Fornavne</label>
             <input ng-model="case.firstName" ng-disabled="!editPatientData">
         </md-input-container>
-        <md-input-container class="md-block">
+        <md-input-container >
             <label>Efternavn</label>
             <input ng-model="case.lastName" ng-disabled="!editPatientData">
         </md-input-container>
+        </div>
         <md-input-container class="md-block">
             <label>Adresse</label>
             <input ng-model="case.address" ng-disabled="!editPatientData">
@@ -35,5 +37,17 @@
                 <input ng-model="case.city" ng-disabled="!editPatientData">
             </md-input-container>
         </div>
+        <md-input-container class="md-block">
+            <label>Etnicitet</label>
+            <input ng-model="case.ethnicity" ng-disabled="!editPatientData">
+        </md-input-container>
+        <md-input-container class="md-block">
+            <label>Mors etnicitet</label>
+            <input ng-model="case.motherEthnicity" ng-disabled="!editPatientData">
+        </md-input-container>
+        <md-input-container class="md-block">
+            <label>Fars etnicitet</label>
+            <input ng-model="case.fatherEthnicity" ng-disabled="!editPatientData">
+        </md-input-container>
     </md-card-content>
 </md-card>
