--- a/app/src/declaration/view/sections/judgement.html
+++ b/app/src/declaration/view/sections/judgement.html
@@ -1,21 +1,27 @@
 <md-card>
     <md-card-title>
         <md-card-title-text>
-            <span class="md-headline">Dom</span>
+            <span class="md-headline">Retsligt udfald</span>
         </md-card-title-text>
     </md-card-title>
     <md-card-content>
-        <md-input-container class="md-block">
-            <label>Endelig dom</label>
-            <input ng-model="case.finalVerdict" ng-disabled="!editPatientData">
-        </md-input-container>
-        <md-input-container class="md-block">
-            <label>Dom</label>
-            <textarea ng-model="case.verdict" rows="5" md-select-on-focus ng-disabled="!editPatientData"></textarea>
-        </md-input-container>
-        <md-input-container class="md-block">
-            <label>Bemærkninger</label>
-            <textarea ng-model="case.remarks" rows="3" md-select-on-focus ng-disabled="!editPatientData"></textarea>
-        </md-input-container>
+        <div layout="row">
+            <div layout="column" flex="45">
+                <md-input-container class="md-block">
+                    <label>Endelig dom</label>
+                    <input ng-model="case.finalVerdict" ng-disabled="!editPatientData">
+                </md-input-container>
+                <md-input-container class="md-block">
+                    <label>Bemærkninger</label>
+                    <textarea class="textarea-highlight" ng-model="case.remarks" rows="8" md-select-on-focus ng-disabled="!editPatientData"></textarea>
+                </md-input-container>
+            </div>
+            <div layout="column" flex="50" flex-offset="5">
+                <md-input-container class="md-block">
+                    <label>Dom</label>
+                    <textarea class="textarea-highlight" ng-model="case.verdict" rows="10" md-select-on-focus ng-disabled="!editPatientData"></textarea>
+                </md-input-container>
+            </div>
+        </div>
     </md-card-content>
 </md-card>
