--- a/app/src/declaration/view/create-toolbar.html
+++ b/app/src/declaration/view/create-toolbar.html
@@ -5,6 +5,6 @@
 </md-button>
 
 <md-button ng-click="submit()" ng-if="'declaration.create' | isState">
-    <md-icon>add</md-icon>
-    <span>Opret erklæring</span>
+    <md-icon>save</md-icon>
+    <span>Gem</span>
 </md-button>
