--- a/app/src/system_settings/dashboard/view/dashboard.html
+++ b/app/src/system_settings/dashboard/view/dashboard.html
@@ -1,1 +1,3 @@
-Velkommen til administrationspanelet
+<div layout="row" layout-align="center center">
+<h1 class="md-headline">Velkommen til administrationspanelet</h1>
+</div>
