--- a/app/src/system_settings/ethnicities/view/ethnicity-list.html
+++ b/app/src/system_settings/ethnicities/view/ethnicity-list.html
@@ -17,19 +17,43 @@
                 <tbody md-body>
                     <tr md-row md-select="dessert" md-select-id="name" md-auto-select>
                         <td md-cell><md-checkbox aria-label="Checkbox {{c.shortRef}}" ng-model="c.shortRef" ng-click="selectedFile(c)"></md-checkbox></td>
-                        <td md-cell>Dansk</td>
+                        <td md-cell>Danmark</td>
                     </tr>
                     <tr md-row md-select="dessert" md-select-id="name" md-auto-select>
                         <td md-cell><md-checkbox aria-label="Checkbox {{c.shortRef}}" ng-model="c.shortRef" ng-click="selectedFile(c)"></md-checkbox></td>
-                        <td md-cell>Svensk</td>
+                        <td md-cell>Vesten</td>
                     </tr>
                     <tr md-row md-select="dessert" md-select-id="name" md-auto-select>
                         <td md-cell><md-checkbox aria-label="Checkbox {{c.shortRef}}" ng-model="c.shortRef" ng-click="selectedFile(c)"></md-checkbox></td>
-                        <td md-cell>Norsk</td>
+                        <td md-cell>Østeuropa</td>
                     </tr>
                     <tr md-row md-select="dessert" md-select-id="name" md-auto-select>
                         <td md-cell><md-checkbox aria-label="Checkbox {{c.shortRef}}" ng-model="c.shortRef" ng-click="selectedFile(c)"></md-checkbox></td>
-                        <td md-cell>Finsk</td>
+                        <td md-cell>Iran</td>
+                    </tr>
+                    <tr md-row md-select="dessert" md-select-id="name" md-auto-select>
+                        <td md-cell><md-checkbox aria-label="Checkbox {{c.shortRef}}" ng-model="c.shortRef" ng-click="selectedFile(c)"></md-checkbox></td>
+                        <td md-cell>Mellemøsten</td>
+                    </tr>
+                    <tr md-row md-select="dessert" md-select-id="name" md-auto-select>
+                        <td md-cell><md-checkbox aria-label="Checkbox {{c.shortRef}}" ng-model="c.shortRef" ng-click="selectedFile(c)"></md-checkbox></td>
+                        <td md-cell>Nordafrika</td>
+                    </tr>
+                    <tr md-row md-select="dessert" md-select-id="name" md-auto-select>
+                        <td md-cell><md-checkbox aria-label="Checkbox {{c.shortRef}}" ng-model="c.shortRef" ng-click="selectedFile(c)"></md-checkbox></td>
+                        <td md-cell>Afrika - Øvrige</td>
+                    </tr>
+                    <tr md-row md-select="dessert" md-select-id="name" md-auto-select>
+                        <td md-cell><md-checkbox aria-label="Checkbox {{c.shortRef}}" ng-model="c.shortRef" ng-click="selectedFile(c)"></md-checkbox></td>
+                        <td md-cell>Fjernøsten</td>
+                    </tr>
+                    <tr md-row md-select="dessert" md-select-id="name" md-auto-select>
+                        <td md-cell><md-checkbox aria-label="Checkbox {{c.shortRef}}" ng-model="c.shortRef" ng-click="selectedFile(c)"></md-checkbox></td>
+                        <td md-cell>Resten af verden</td>
+                    </tr>
+                    <tr md-row md-select="dessert" md-select-id="name" md-auto-select>
+                        <td md-cell><md-checkbox aria-label="Checkbox {{c.shortRef}}" ng-model="c.shortRef" ng-click="selectedFile(c)"></md-checkbox></td>
+                        <td md-cell>Grønland</td>
                     </tr>
                 </tbody>
             </table>
