--- a/app/src/declaration/view/lock-dialog.html
+++ b/app/src/declaration/view/lock-dialog.html
@@ -3,7 +3,7 @@
 
         <md-toolbar>
             <div class="md-toolbar-tools">
-                <h2>Lås sagen</h2>
+                <h2>Afslut sagen</h2>
                 <span flex></span>
                 <md-button class="md-icon-button" ng-click="vm.cancel()">
                     <i class="material-icons" aria-label="Luk dialogboks">close</i>
@@ -30,7 +30,7 @@
 
         <md-dialog-actions>
             <md-button ng-disabled="lockDeclarationForm.$invalid" type="submit" class="md-primary md-text-icon-button">
-                <md-icon>lock</md-icon> Lås
+                <md-icon>lock</md-icon> Afslut
             </md-button>
         </md-dialog-actions>
     </form>
