--- a/app/src/declaration/view/sections/basic-info.html
+++ b/app/src/declaration/view/sections/basic-info.html
@@ -11,15 +11,15 @@
         </md-input-container>-->
         <md-input-container class="md-block">
             <label>CPR</label>
-            <input ng-model="case.cprNumber"  ng-disabled="!editPatientData">
+            <input ng-model="case.cprNumber"  ng-disabled="!editPatientData" required>
         </md-input-container>
         <md-input-container class="md-block">
             <label>Fornavne</label>
-            <input ng-model="case.firstName" ng-disabled="!editPatientData">
+            <input ng-model="case.firstName" ng-disabled="!editPatientData" required>
         </md-input-container>
         <md-input-container class="md-block">
             <label>Efternavn</label>
-            <input ng-model="case.lastName" ng-disabled="!editPatientData">
+            <input ng-model="case.lastName" ng-disabled="!editPatientData" required>
         </md-input-container>
         <md-input-container class="md-block">
             <label>Adresse</label>
@@ -37,15 +37,51 @@
         </div>
         <md-input-container class="md-block">
             <label>Etnicitet</label>
-            <input ng-model="case.ethnicity" ng-disabled="!editPatientData">
+            <md-select ng-model="case.ethnicity" ng-disabled="!editPatientData">
+              <md-option ng-repeat="ethnicity in ethnicityOptions" value="{{ethnicity.shortName}}">
+                {{ethnicity.displayName}}
+              </md-option>
+            </md-select>
         </md-input-container>
         <md-input-container class="md-block">
             <label>Mors etnicitet</label>
-            <input ng-model="case.motherEthnicity" ng-disabled="!editPatientData">
+            <md-select ng-model="case.motherEthnicity" ng-disabled="!editPatientData">
+              <md-option ng-repeat="ethnicity in ethnicityOptions" value="{{ethnicity.shortName}}">
+                {{ethnicity.displayName}}
+              </md-option>
+            </md-select>
         </md-input-container>
         <md-input-container class="md-block">
             <label>Fars etnicitet</label>
-            <input ng-model="case.fatherEthnicity" ng-disabled="!editPatientData">
+            <md-select ng-model="case.fatherEthnicity" ng-disabled="!editPatientData">
+              <md-option ng-repeat="ethnicity in ethnicityOptions" value="{{ethnicity.shortName}}">
+                {{ethnicity.displayName}}
+              </md-option>
+            </md-select>
         </md-input-container>
+
+        <md-autocomplete flex
+            md-input-name="autocompleteField"
+            md-selected-item="selectedEthnicity"
+            md-items="ethnicity in ethnicityOptions"
+            md-item-text="ethnicity.displayName"
+            md-floating-label="Etnicitet">
+          <md-item-template>
+            <span>{{ethnicity.displayName}}</span>
+          </md-item-template>
+        </md-autocomplete>
+
+        <md-autocomplete
+                md-selected-item="selectedEthnicity"
+                md-search-text="ethnicitySearch"
+                md-items="ethnicity in ethnicityOptions"
+                md-item-text="ethnicity" 
+                placeholder="Søg på et navn, CPR eller sagsnummer" flex>
+                <md-item-template>
+                    <span md-highlight-text="" md-highlight-flags="gi">
+                        {{ethnicity}}
+                    </span>
+                </md-item-template>
+            </md-autocomplete>
     </md-card-content>
 </md-card>
